--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,7 @@
 		
 		<link rel="stylesheet" href="%PUBLIC_URL%/new-age/css/device-mockups/device-mockups.min.css">
 		<link rel="stylesheet" href="%PUBLIC_URL%/new-age/css/new-age.min.css">
-
+		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 		
 		
     <!--
@@ -34,10 +34,7 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root"></div>
+    	<div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
